# open62541-esp32s3

./: CMakeLists.txt  README.md  nodes_blacklist.txt  partitions_example.csv
components/open62541/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  main.c
